--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
     <properties>
         <java.version>11</java.version>
         <junit.jupiter.version>5.8.0-M1</junit.jupiter.version>
+<!--        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>-->
+<!--        <maven-dependency-plugin.version>3.2.0</maven-dependency-plugin.version>-->
     </properties>
 
     <dependencies>
@@ -25,6 +27,12 @@
             <artifactId>code-generator</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+<!--        Find why tests compilation failes when annotation processor is included-->
+<!--        <dependency>-->
+<!--            <groupId>net.binis</groupId>-->
+<!--            <artifactId>code-generator-annotation</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
@@ -62,4 +70,35 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+<!--    <build>-->
+<!--        <plugins>-->
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-compiler-plugin</artifactId>-->
+<!--                <version>${maven-compiler-plugin.version}</version>-->
+<!--                <configuration>-->
+<!--                    <source>${java.version}</source>-->
+<!--                    <target>${java.version}</target>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+<!--            <plugin>-->
+<!--                <artifactId>maven-dependency-plugin</artifactId>-->
+<!--                <version>${maven-dependency-plugin.version}</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <phase>generate-sources</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>build-classpath</goal>-->
+<!--                        </goals>-->
+<!--                        <configuration>-->
+<!--                            <outputProperty>maven.compile.classpath</outputProperty>-->
+<!--                            <pathSeparator>;</pathSeparator>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
+<!--        </plugins>-->
+<!--    </build>-->
+
 </project>
