--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,9 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.2.2</version>
+                    <configuration>
+<!--                        <argLine>-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000</argLine>-->
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
