--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>dev.binis</groupId>
     <artifactId>code-generation-test</artifactId>
-    <version>1.1.29</version>
+    <version>1.2.0</version>
     <name>code-generation-test</name>
     <description>Test capabilities for Binis code generation library</description>
     <url>https://github.com/binis2/code-generation</url>
@@ -53,7 +53,7 @@
 
     <properties>
         <java.version>17</java.version>
-        <dev.binis>1.1.29</dev.binis>
+        <dev.binis>1.2.0</dev.binis>
         <license.licenseName>apache_v2</license.licenseName>
         <junit.jupiter.version>5.10.1</junit.jupiter.version>
         <resource.delimiter>@</resource.delimiter>
@@ -97,12 +97,18 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>5.7.0</version>
+            <version>5.8.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <version>6.1.1</version>
+            <version>6.1.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>2.2.20</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
